--- a/view/App.view.xml
+++ b/view/App.view.xml
@@ -3,11 +3,11 @@
   xmlns="sap.m"
   xmlns:mvc="sap.ui.core.mvc">
     <Button 
-      text="{i18n>showHelloButtonText}"
+      text="Say Hello"
       press="onShowHello"/>
     <Input
       value="{/recipient/name}"
-      description="{i18n>greeting} {/recipient/name}"
+      description="Hello {/recipient/name}"
       valueLiveUpdate="true"
       width="60%"/>
 </mvc:View>
