--- a/view/App.view.xml
+++ b/view/App.view.xml
@@ -2,6 +2,9 @@
 	<App class="sapUiDemoWT">
 		<pages>
 			<Page title="{i18n>homePageTitle}">
+			    <headerContent>
+			        <Button icon="sap-icon://hello-world" press="onOpenDialog"/>
+			    </headerContent>
 				<content>
 				    <mvc:XMLView viewName="sap.ui.demo.walkthrough.view.HelloPanel"/>
 				</content>
