--- a/view/HelloPanel.view.xml
+++ b/view/HelloPanel.view.xml
@@ -1,7 +1,7 @@
 <mvc:View controllerName="sap.ui.demo.walkthrough.controller.HelloPanel" xmlns="sap.m" xmlns:mvc="sap.ui.core.mvc">
 	<Panel headerText="{i18n>helloPanelTitle}" class="sapUiResponsiveMargin" width="auto">
 		<content>
-			<Button text="{i18n>openDialogButtonText}" icon="sap-icon://world" press="onOpenDialog" clas="sapUiSmallMarginEnd"/>
+			<Button text="{i18n>openDialogButtonText}" icon="sap-icon://world" press="onOpenDialog" class="sapUiSmallMarginEnd"/>
 			<Button text="{i18n>showHelloButtonText}" press="onShowHello" class="myAppDemoWT myCustomButton"/>
 			<Input value="{/recipient/name}" valueLiveUpdate="true" width="60%"/>
 			<FormattedText htmlText="Hello {/recipient/name}" class="sapUiSmallMargin sapThemeHighlight-asColor myCustomText"/>
